--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 [dependencies]
 bevy = { version = "0.14.2", features = ["meshlet","meshlet_processor", "bevy_dev_tools"] }
+bevy_egui = "0.30.0"
 bevy_prototype_debug_lines = "0.12.0"
 
 
