--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,11 @@ edition = "2021"
 bevy = { version = "0.14.2", features = ["meshlet","meshlet_processor", "bevy_dev_tools"] }
 bevy_egui = "0.30.0"
 bevy_prototype_debug_lines = "0.12.0"
+reqwest = { version = "0.11", features = ["json"] }
+tokio = { version = "1", features = ["full"] }
+serde = { version = "1.0", features = ["derive"] }
+rand = "0.8.5"
+async-std = "1.13.0"
 
 
 [profile.dev]
