--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,8 @@ tokio = { version = "1", features = ["full"] }
 serde = { version = "1.0", features = ["derive"] }
 rand = "0.8.5"
 async-std = "1.13.0"
+event-listener = "5.3.1"
+futures-lite = "2.5.0"
 
 
 [profile.dev]
